# ShouDao

./: .coverage  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  ShouDao_BACKLOG.md  ShouDao_PRD.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: world_context.yaml
recipes/: caribbean-windows.yml  gauntlet-cohort4.yml  miami-windows.yml  saint-martin-takeout.yml
scripts/: build_analysis_doc.py
src/shoudao/: __init__.py  advisor.py  cli.py  dedupe.py  exporter.py  extractor.py  fetcher.py  github.py  linkedin.py  logger.py  models.py  outreach.py  parallel.py  pipeline.py  recipe.py  search.py  sources.py  world_context.py
tests/: __init__.py  conftest.py  test_cli.py  test_dedupe.py  test_exporter.py  test_github.py  test_linkedin.py  test_logger.py  test_models.py  test_recipe.py  test_search.py  test_talent.py
