[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shoudao"
version = "0.1.0"
description = "Prompt to Leads CSV - B2B lead generation tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0.0",
    "openpyxl>=3.1.0",
    "apify-client>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "pre-commit>=3.6.0",
]

[project.scripts]
shoudao = "shoudao.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shoudao"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
